# dk64_lib

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  REFACTOR_PLAN.md  pyproject.toml
.github/workflows/: publish.yml
dk64_lib/: __init__.py  rom.py
dk64_lib/assets/: kiosk_sprites.json  maps.json  release_sprites.json
dk64_lib/components/: triangle.py  vertex.py
dk64_lib/constants/: maps.py
dk64_lib/data_types/: __init__.py  base.py  cutscene.py  geometry.py  text.py  text_table.py  texture.py
dk64_lib/f3dex2/: commands.py  display_list.py
dk64_lib/tables/: base.py  text_table.py  texture_table.py
dk64_lib_src/dk64_lib/: file_io.py  rom.py
dk64_lib_src/dk64_lib/tables/: __init__.py  text_table.py
docs/: Makefile  asset-types.rst  conf.py  exports.rst  getting-started.rst  index.rst  repository-guide.rst  textured-geometry.rst
docs/_static/: custom.css
docs/api/: data-types.rst  f3dex2.rst  geometry.rst  index.rst  rom.rst  texture-analysis.rst  utilities.rst
src/dk64_lib/: binary_reader.py  file_io.py  rom.py  texture_analysis.py
src/dk64_lib/components/: triangle.py  vertex.py
src/dk64_lib/constants/: __init__.py  kiosk_sprites.py  release_sprites.py
src/dk64_lib/data_types/: __init__.py  base.py  cutscene.py  geometry.py  table_stubs.py  text.py  (+1 more)
tests/: test_binary_reader.py  test_commands.py  test_components.py  test_display_list.py  test_display_list_metadata.py  test_dk64_lib.py  test_f3dex2_geometry.py  test_obj_output.py  test_rom_exports.py  test_table_stubs.py  test_text_data.py  test_texture_analysis.py  test_texture_export.py
(+4 files in other folders)
