[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dk64_lib"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "construct>=2.10.70",
    "pycollada",
]

[dependency-groups]
dev = [
    "construct-typing>=0.7.0",
    "ipython>=8.37.0",
    "pudb>=2025.1.3",
    "pytest>=8.4.2",
]
